--- a/public/index.html
+++ b/public/index.html
@@ -5,29 +5,170 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>System Monitor</title>
   <script src="/socket.io/socket.io.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 10px 0;
+      text-align: center;
+    }
+
+    nav {
+      background-color: #444;
+      color: #fff;
+      padding: 10px;
+      display: flex;
+      justify-content: space-around;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+    }
+
+    nav a:hover {
+      background-color: #555;
+    }
+
+    .container {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+    }
+
+    .container.active {
+      display: flex;
+    }
+
+    .card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+      width: 100%;
+      max-width: 600px;
+    }
+
+    label {
+      display: block;
+      margin-top: 10px;
+    }
+
+    input[type="number"],
+    input[type="email"],
+    button {
+      width: calc(100% - 20px);
+      margin: 10px 0;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    button {
+      background-color: #007BFF;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    .slider-container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 10px;
+    }
+
+    .slider {
+      width: 80%;
+    }
+  </style>
 </head>
 <body>
-  <h1>System Monitor</h1>
-  <div id="system-info"></div>
-  <div id="cpu-stats">
-    <p>Average CPU Usage: <span id="avgCpu">N/A</span>%</p>
-    <p>Minimum CPU Usage: <span id="minCpu">N/A</span>%</p>
-    <p>Maximum CPU Usage: <span id="maxCpu">N/A</span>%</p>
+  <header>
+    <h1>System Monitor</h1>
+  </header>
+  
+  <nav>
+    <a href="#overview" id="nav-overview">Overview</a>
+    <a href="#settings" id="nav-settings">Settings</a>
+  </nav>
+  
+  <div class="container" id="overview">
+    <div class="card" id="system-info">
+      <h2>System Information</h2>
+      <div class="slider-container">
+        <label for="decimalSlider">Decimal Points:</label>
+        <input type="range" min="0" max="4" value="2" class="slider" id="decimalSlider">
+        <span id="decimalValue">2</span>
+      </div>
+      <label for="unitSwitch">Units:</label>
+      <select id="unitSwitch">
+        <option value="bytes">Bytes</option>
+        <option value="mbps">Mbps</option>
+      </select>
+    </div>
+    <div class="card" id="cpu-stats">
+      <h2>CPU Statistics</h2>
+      <p>Average CPU Usage: <span id="avgCpu">N/A</span>%</p>
+      <p>Minimum CPU Usage: <span id="minCpu">N/A</span>%</p>
+      <p>Maximum CPU Usage: <span id="maxCpu">N/A</span>%</p>
+    </div>
   </div>
-  <form id="settings-form">
-    <label for="maxCpu">Max CPU Usage (%):</label>
-    <input type="number" id="maxCpu2" name="maxCpu2" required>
-    <br>
-    <label for="maxDisk">Max Disk Usage (%):</label>
-    <input type="number" id="maxDisk" name="maxDisk" required>
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-    <br>
-    <button type="submit">Save Settings</button>
-  </form>
+  
+  <div class="container" id="settings">
+    <div class="card">
+      <h2>Settings</h2>
+      <form id="settings-form">
+        <label for="maxCpu2">Max CPU Usage (%):</label>
+        <input type="number" id="maxCpu2" name="maxCpu2" required>
+        <label for="maxDisk">Max Disk Usage (%):</label>
+        <input type="number" id="maxDisk" name="maxDisk" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <button type="submit">Save Settings</button>
+      </form>
+    </div>
+  </div>
+  
   <script>
+    document.getElementById('nav-overview').addEventListener('click', () => {
+      document.getElementById('overview').classList.add('active');
+      document.getElementById('settings').classList.remove('active');
+    });
+
+    document.getElementById('nav-settings').addEventListener('click', () => {
+      document.getElementById('overview').classList.remove('active');
+      document.getElementById('settings').classList.add('active');
+    });
+
     const socket = io();
+    let decimalPoints = 2;
+    let unit = 'bytes';
+
+    document.getElementById('decimalSlider').addEventListener('input', (event) => {
+      decimalPoints = event.target.value;
+      document.getElementById('decimalValue').innerText = decimalPoints;
+    });
+
+    document.getElementById('unitSwitch').addEventListener('change', (event) => {
+      unit = event.target.value;
+      socket.emit('requestSystemInfo');
+    });
 
     document.getElementById('settings-form').addEventListener('submit', async (event) => {
       event.preventDefault();
@@ -52,22 +193,49 @@
     });
 
     socket.on('systemInfo', (info) => {
+      const convertToUnit = (bytes) => {
+        return unit === 'mbps' ? (bytes / (1024 * 1024)).toFixed(decimalPoints) + ' Mbps' : bytes.toFixed(decimalPoints) + ' bytes';
+      };
+
       document.getElementById('system-info').innerHTML = `
-        <p>CPU Load: ${info.cpu.load}%</p>
-        <p>RAM Usage: ${info.ram}%</p>
-        <p>Disk Usage: ${info.disk}%</p>
+        <h2>System Information</h2>
+        <div class="slider-container">
+          <label for="decimalSlider">Decimal Points:</label>
+          <input type="range" min="0" max="4" value="${decimalPoints}" class="slider" id="decimalSlider">
+          <span id="decimalValue">${decimalPoints}</span>
+        </div>
+        <label for="unitSwitch">Units:</label>
+        <select id="unitSwitch">
+          <option value="bytes" ${unit === 'bytes' ? 'selected' : ''}>Bytes</option>
+          <option value="mbps" ${unit === 'mbps' ? 'selected' : ''}>Mbps</option>
+        </select>
+        <p>CPU Load: ${info.cpu.load.toFixed(decimalPoints)}%</p>
+        <p>RAM Usage: ${info.ram.toFixed(decimalPoints)}%</p>
+        <p>Disk Usage: ${info.disk.toFixed(decimalPoints)}%</p>
         ${Object.keys(info.network).map(iface => `
-          <p>Network (${iface}) Input: ${info.network[iface].inputBytes} Bytes</p>
-          <p>Network (${iface}) Output: ${info.network[iface].outputBytes} Bytes</p>
+          <p>Network (${iface}) Input: ${convertToUnit(info.network[iface].inputBytes)}</p>
+          <p>Network (${iface}) Output: ${convertToUnit(info.network[iface].outputBytes)}</p>
         `).join('')}
       `;
+
+      document.getElementById('decimalSlider').addEventListener('input', (event) => {
+        decimalPoints = event.target.value;
+        document.getElementById('decimalValue').innerText = decimalPoints;
+      });
+
+      document.getElementById('unitSwitch').addEventListener('change', (event) => {
+        unit = event.target.value;
+        socket.emit('requestSystemInfo');
+      });
     });
 
     socket.on('cpuStats', (stats) => {
-      document.getElementById('avgCpu').innerText = stats.avgCpu.toFixed(2);
-      document.getElementById('minCpu').innerText = stats.minCpu.toFixed(2);
-      document.getElementById('maxCpu').innerText = stats.maxCpu.toFixed(2);
+      document.getElementById('avgCpu').innerText = stats.avgCpu.toFixed(decimalPoints);
+      document.getElementById('minCpu').innerText = stats.minCpu.toFixed(decimalPoints);
+      document.getElementById('maxCpu').innerText = stats.maxCpu.toFixed(decimalPoints);
     });
+
+    socket.emit('requestSystemInfo');
   </script>
 </body>
 </html>
